--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ settings:
 monitors:
   - id: tatooine-incunabula-be # unique identifier
     name: tatooine.incunabula.be
-    description: 'Serverless on CF Pages.' # default=empty
+    description: 'Serverless on CF Pages' # default=empty
     url: 'https://tatooine.incunabula.be/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
@@ -26,14 +26,14 @@ monitors:
 
   - id: www-incunabula-be
     name: www.incunabula.be
-    description: 'Raspi4 @ Loppem.'
+    description: 'Raspi4 @ Loppem'
     url: 'https://www.incunabula.be'
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
 
   - id: blog-incunabula-be
-    name: Steve blog on Github Pages
+    name: Jekyll blog on Github Pages
     url: 'https://blog.incunabula.be/'
     method: GET
     expectStatus: 200
